--- a/src/css/_variables.scss
+++ b/src/css/_variables.scss
@@ -7,8 +7,8 @@
 
 $rtl: false !default;
 
-$blueSecondary: rgba(43, 184, 255, 1);
-$blue: rgba(10, 124, 179, 1);
+$blueSecondary: rgb(247, 137, 12);
+$blue: rgb(255, 153, 0);
 $orange: rgba(255, 161, 43, 1);
 $orangeSecondary: rgba(255, 172, 69, 1);
 
