--- a/src/css/chat.scss
+++ b/src/css/chat.scss
@@ -30,7 +30,7 @@
     padding: 0.5rem;
     border-radius: 0.25rem;
     width: 100%;
-    color: #1e89f6;
+    color: #ff7b00;
     margin-right: 0.5rem;
   }
 
